# Google_BenchMark_Test

./: .gitmodules  CMakeLists.txt  README.md  результаты.drawio
src/: QContainers.cpp  SwitchCase.cpp  benchmarktest.cpp  benchmarktest.h  elseIf.cpp  helpfunction.cpp  helpfunction.h  main.cpp
submodule/: CMakeLists.txt
